 - Added an URI resolver to the Transformer based on the context's dispatcher. That will allow the usage of
   the "document()" XPath methods and other imports to be defined in XSLT stylesheets. Fixes #125.
 - Added support for CheckStyle (disabled by default). The CheckStyle configuration file is "build/checks.xml", 
   currently a clone of sun_checks.xml. Suggested by Piyush Purang.

1.0 beta 21 (2006-11-26)
[Bugs fixed]
 - Fixed potential NPE when some JAR files are missing (no API implementation, no connector found, etc.). 
   Reported by Dave Pawson.
 - Reenabled the content negotiation by default for Directory instances. This prevented the correct serving of
   index files in tutorial. Reported by Dave Pawson.
 - Fixed ServerServlet which forgot to set the proper Servlet Context on the Application. Reported by Evan 
   DiBiase.
 - Fixed NPE in Guard when no challenge response is set. Reported by Dave Pawson.
 - Integrated patches and bug fixes (few NPEs) detected by FindBugs. Contributed by Piyush Purang.
 - Fixed Handler which didn't copy the "redirectRef" from the Result instance returned by post/put/delete
   methods on Resource. Reported by Chris Grindstaff.
 - Fixed NRE Container which didn't start the attached applications. Reported by Sumit Lohia.
 - Fixed inneficiency issue in StringTemplateRepresentation which was reevaluating the same template multiple
   times. Reported by Chris Grindstaff.
 - Fixed NPE in Representation when creating an EncoderRepresentation. Reported by Chris Grindstaff.
 - Fixed bug in EncoderRepresentation returning the original size instead of the size of the encoded 
   representation (or -1 when no known). That was causing truncation of the output in browsers.
 - Fixed several issues related to the FILE client connector (#182 and #39). Contributed by Thierry Boileau.
 - Fixed bug in Message preventing the sending of entities with an unknown size (-1). Reported by Mitch Stewart.